[package]
name = "archipel-dhttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
async-h1 = "2.3.4"
clap = { version = "4.4.11", features = ["derive"] }
futures-lite = "2.1.0"
http-types = "2.12.0"
libc = "0.2.151"
thiserror = "1.0.52"
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
ud3tn-aap = { git = "https://github.com/archipel-network/rust-ud3tn.git" }